--- a/trunk/configs/boards/RT-AC51U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC51U/kernel-3.4.x.config
@@ -821,9 +821,9 @@ CONFIG_MTD_RALINK=y
 CONFIG_MTD_SPI_RALINK=y
 # CONFIG_MTD_NAND_RALINK is not set
 CONFIG_MTD_SPI_FAST_CLOCK=y
-CONFIG_MTD_SPI_READ_NORM=y
+# CONFIG_MTD_SPI_READ_NORM is not set
 # CONFIG_MTD_SPI_READ_FAST is not set
-# CONFIG_MTD_SPI_READ_DOR is not set
+CONFIG_MTD_SPI_READ_DOR=y
 # CONFIG_MTD_SPI_READ_DIOR is not set
 # CONFIG_RT2880_FLASH_4M is not set
 # CONFIG_RT2880_FLASH_8M is not set
