--- a/uboot/mips/profiles/asus_rt-ac51u_ac54u/.config
+++ b/uboot/mips/profiles/asus_rt-ac51u_ac54u/.config
@@ -29,7 +29,7 @@ P4_MAC_TO_NONE_MODE=y
 # ON_BOARD_NAND_FLASH_COMPONENT is not set
 ON_BOARD_SPI_FLASH_COMPONENT=y
 SPI_FAST_CLOCK=y
-# SPI_FLASH_READ_DOR is not set
+SPI_FLASH_READ_DOR=y
 # ON_BOARD_SDR is not set
 # ON_BOARD_DDR1 is not set
 ON_BOARD_DDR2=y
