U-Boot: update board profiles

--- a/uboot/mips/profiles/asus_rt-ac1200hp/.config
+++ b/uboot/mips/profiles/asus_rt-ac1200hp/.config
@@ -19,12 +19,14 @@ MT7620_MP=y
 # P5_MAC_TO_NONE_MODE is not set
 P5_MAC_TO_PHY_MODE=y
 # P5_RGMII_TO_MAC_MODE is not set
+# P5_RGMII_FORCE_RTL8367 is not set
 # P5_MII_TO_MAC_MODE is not set
 # P5_RMII_TO_MAC_MODE is not set
 MAC_TO_GIGAPHY_MODE_ADDR=0x5
 P4_MAC_TO_NONE_MODE=y
 # P4_MAC_TO_PHY_MODE is not set
 # P4_RGMII_TO_MAC_MODE is not set
+# P4_RGMII_FORCE_RTL8367 is not set
 # P4_MII_TO_MAC_MODE is not set
 # P4_RMII_TO_MAC_MODE is not set
 # ON_BOARD_NAND_FLASH_COMPONENT is not set
@@ -64,7 +66,6 @@ MT7620_PLL_DIV_RATIO_2=y
 # MT7620_PLL_DIV_RATIO_4 is not set
 CPLL_DIV_RATIO_CFG=0
 CPLL_SSC_CFG=0x7
-# DUAL_IMAGE_SUPPORT is not set
 USB_RECOVERY_SUPPORT=y
 LAN_WAN_PARTITION=y
 # RALINK_DEMO_BOARD_PVLAN is not set
