--- a/uboot/mips/profiles/asus_rt-n11p/.config
+++ b/uboot/mips/profiles/asus_rt-n11p/.config
@@ -19,11 +19,13 @@ MT7620_MP=y
 P5_MAC_TO_NONE_MODE=y
 # P5_MAC_TO_PHY_MODE is not set
 # P5_RGMII_TO_MAC_MODE is not set
+# P5_RGMII_FORCE_RTL8367 is not set
 # P5_MII_TO_MAC_MODE is not set
 # P5_RMII_TO_MAC_MODE is not set
 P4_MAC_TO_NONE_MODE=y
 # P4_MAC_TO_PHY_MODE is not set
 # P4_RGMII_TO_MAC_MODE is not set
+# P4_RGMII_FORCE_RTL8367 is not set
 # P4_MII_TO_MAC_MODE is not set
 # P4_RMII_TO_MAC_MODE is not set
 # ON_BOARD_NAND_FLASH_COMPONENT is not set
@@ -47,7 +49,6 @@ CPLL_NONE=y
 # CPLL_FROM_480MHZ is not set
 # CPLL_FROM_XTAL is not set
 # CPLL_FROM_CONF is not set
-# DUAL_IMAGE_SUPPORT is not set
 # USB_RECOVERY_SUPPORT is not set
 LAN_WAN_PARTITION=y
 # RALINK_DEMO_BOARD_PVLAN is not set
