--- a/uboot/mips/profiles/asus_rt-n56u/.config
+++ b/uboot/mips/profiles/asus_rt-n56u/.config
@@ -26,15 +26,27 @@ GE_RGMII_FORCE_RTL8367=y
 # GE_RGMII_FORCE_VITESSE is not set
 # GE_RGMII_AN is not set
 MAC_TO_RTL8367_MODE=y
-SWITCH_ASIC_RTL8367M=y
 # SWITCH_ASIC_RTL8367R is not set
+SWITCH_ASIC_RTL8367M=y
+# SWITCH_ASIC_RTL8370M is not set
 # SWITCH_ASIC_RTL8367RVB is not set
 # SWITCH_ASIC_RTL8367RB is not set
+# SWITCH_ASIC_RTL8367MVB is not set
+# SWITCH_ASIC_RTL8367MB is not set
+# SWITCH_ASIC_RTL8365MB is not set
+# SWITCH_ASIC_RTL8368MB is not set
 SWITCH_CTRLIF_SMI=y
 # SWITCH_CTRLIF_MDIO is not set
+SWITCH_SMI_GPIO_SDA=1
+SWITCH_SMI_GPIO_SCK=2
 # SWITCH_CPU_PORT_EXT0 is not set
 SWITCH_CPU_PORT_EXT1=y
 # SWITCH_CPU_PORT_EXT2 is not set
+SWITCH_RGMII_DELAY_TX=1
+SWITCH_RGMII_DELAY_RX=0
+SWITCH_LED_GROUP0=y
+SWITCH_LED_GROUP1=y
+# SWITCH_LED_GROUP2 is not set
 ON_BOARD_NOR_FLASH_COMPONENT=y
 # ON_BOARD_NAND_FLASH_COMPONENT is not set
 # ON_BOARD_SPI_FLASH_COMPONENT is not set
@@ -50,7 +62,6 @@ ON_BOARD_16BIT_DRAM_BUS=y
 # ON_BOARD_32BIT_DRAM_BUS is not set
 # UBOOT_RAM is not set
 UBOOT_ROM=y
-# DUAL_IMAGE_SUPPORT is not set
 USB_RECOVERY_SUPPORT=y
 LAN_WAN_PARTITION=y
 # RALINK_DEMO_BOARD_PVLAN is not set
