project tree: add 'webui-aria2' (http://github.com/ziahamza/webui-aria2) frontend. Thanks to 'Volt1' from iXBT for complete patch

--- a/trunk/configs/templates/n65u_base.config
+++ b/trunk/configs/templates/n65u_base.config
@@ -1,16 +1,12 @@
-### Target Vendor/Product (support only Ralink RT3883/MT7620/MT7621)
+### Target Vendor/Product (support only Ralink RT3883/MT7620/MT7621/MT7628)
 CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=RT3883
 
 ### Target ProductID (board select, max 12 symbols)
-#CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 CONFIG_FIRMWARE_PRODUCT_ID="RT-N65U"
-#CONFIG_FIRMWARE_PRODUCT_ID="SWR1100"
-#CONFIG_FIRMWARE_PRODUCT_ID="BN750DB"
 
 ### Linux kernel and toolchain (only linux-3.0.x for "RT-N65U" target yet)
 CONFIG_LINUXDIR=linux-3.0.x
-#CONFIG_LINUXDIR=linux-3.4.x
 CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 
 ############################################################
@@ -188,4 +184,7 @@ CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
 #CONFIG_FIRMWARE_INCLUDE_ARIA=y
+
+### Include Aria2 WEB control. ~0.7MB
+#CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
 
