--- a/trunk/user/aria2/Makefile
+++ b/trunk/user/aria2/Makefile
@@ -50,5 +50,9 @@ clean:
 	rm -rf install
 
 romfs:
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL),y)
+	cp -rf $(THISDIR)/ariaweb $(INSTALLDIR)/www
+	cd $(INSTALLDIR)/www/ariaweb && ln -sf /mnt/aria/config/configuration.js configuration.js
+endif
 	$(ROMFSINST) $(THISDIR)/$(SRC_NAME)/src/aria2c /usr/bin/aria2c
 	$(ROMFSINST) -p +x /usr/bin/aria.sh
