--- a/trunk/.config
+++ b/trunk/.config
@@ -1,17 +1,11 @@
-### Target Vendor/Product (support only Ralink RT3883/MT7620/MT7621)
+### Target Vendor/Product (support only Ralink RT3883/MT7620/MT7621/MT7628)
 CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=RT3883
-#CONFIG_PRODUCT=MT7620
 
 ### Target ProductID (board select, max 12 symbols)
-#CONFIG_FIRMWARE_PRODUCT_ID="RT-N14U"
 CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
-#CONFIG_FIRMWARE_PRODUCT_ID="RT-N65U"
-#CONFIG_FIRMWARE_PRODUCT_ID="SWR1100"
-#CONFIG_FIRMWARE_PRODUCT_ID="BN750DB"
 
-### Linux kernel and toolchain (only linux-3.0.x for "RT-N65U" target yet)
-#CONFIG_LINUXDIR=linux-3.0.x
+### Linux kernel and toolchain
 CONFIG_LINUXDIR=linux-3.4.x
 CONFIG_TOOLCHAIN_DIR=/opt/rt-n56u/toolchain-mipsel
 
@@ -45,7 +39,7 @@ CONFIG_FIRMWARE_ENABLE_USB=y
 CONFIG_FIRMWARE_ENABLE_UFSD=y
 
 ### Enable FAT/FAT32 filesystem support. ~0.1MB
-#CONFIG_FIRMWARE_ENABLE_FAT=y
+CONFIG_FIRMWARE_ENABLE_FAT=y
 
 ### Enable exFAT (FAT/FAT32 too) filesystem support. ~0.12MB
 CONFIG_FIRMWARE_ENABLE_EXFAT=y
@@ -196,4 +190,7 @@ CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
 #CONFIG_FIRMWARE_INCLUDE_ARIA=y
+
+### Include Aria2 WEB control. ~0.7MB
+#CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
 
