--- a/trunk/configs/templates/n11p_base.config
+++ b/trunk/configs/templates/n11p_base.config
@@ -1,4 +1,4 @@
-### Target Vendor/Product (support only Ralink RT3883/MT7620/MT7621)
+### Target Vendor/Product (support only Ralink RT3883/MT7620/MT7621/MT7628)
 CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=MT7620
 
