--- a/trunk/configs/templates/n56u_aria.config
+++ b/trunk/configs/templates/n56u_aria.config
@@ -1,12 +1,9 @@
-### Target Vendor/Product (support only Ralink RT3883/MT7620/MT7621)
+### Target Vendor/Product (support only Ralink RT3883/MT7620/MT7621/MT7628)
 CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=RT3883
 
 ### Target ProductID (board select, max 12 symbols)
 CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
-#CONFIG_FIRMWARE_PRODUCT_ID="RT-N65U"
-#CONFIG_FIRMWARE_PRODUCT_ID="SWR1100"
-#CONFIG_FIRMWARE_PRODUCT_ID="BN750DB"
 
 ### Linux kernel and toolchain
 CONFIG_LINUXDIR=linux-3.4.x
@@ -90,7 +87,7 @@ CONFIG_FIRMWARE_INCLUDE_IPSET=y
 CONFIG_FIRMWARE_INCLUDE_NFSD=y
 
 ### Include NFSv3 client. ~0.5MB
-CONFIG_FIRMWARE_INCLUDE_NFSC=y
+#CONFIG_FIRMWARE_INCLUDE_NFSC=y
 
 ### Include CIFS (SMB) client. ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_CIFS=y
@@ -193,4 +190,7 @@ CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
 CONFIG_FIRMWARE_INCLUDE_ARIA=y
+
+### Include Aria2 WEB control. ~0.7MB
+CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
 
