--- a/trunk/configs/templates/n56ub1_base.config
+++ b/trunk/configs/templates/n56ub1_base.config
@@ -1,4 +1,4 @@
-### Target Vendor/Product (support only Ralink RT3883/MT7620/MT7621)
+### Target Vendor/Product (support only Ralink RT3883/MT7620/MT7621/MT7628)
 CONFIG_VENDOR=Ralink
 CONFIG_PRODUCT=MT7621
 
@@ -196,4 +196,7 @@ CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
 #CONFIG_FIRMWARE_INCLUDE_ARIA=y
+
+### Include Aria2 WEB control. ~0.7MB
+#CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
 
