--- a/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
@@ -52,7 +52,7 @@ CONFIG_MT7621_ASIC=y
 CONFIG_PCIE_PORT0=y
 CONFIG_PCIE_PORT1=y
 # CONFIG_PCIE_PORT2 is not set
-# CONFIG_PCIE_PERST_ONLY is not set
+CONFIG_PCIE_PERST_ONLY=y
 # CONFIG_RALINK_MT7621_PLL900 is not set
 # CONFIG_RALINK_SYSTICK_COUNTER is not set
 # CONFIG_RALINK_CPUSLEEP is not set
