--- a/trunk/user/transmission/Makefile
+++ b/trunk/user/transmission/Makefile
@@ -54,6 +54,7 @@ ifeq ($(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL),y)
 	cp -rf $(THISDIR)/transmission-control/web $(INSTALLDIR)/usr/share/transmission
 else
 	cp -rf $(THISDIR)/install/usr/share/transmission $(INSTALLDIR)/usr/share
+	rm -f $(INSTALLDIR)/usr/share/transmission/web/LICENSE
 endif
 	$(ROMFSINST) $(THISDIR)/install/usr/bin/transmission-daemon /usr/bin/transmission-daemon
 	$(ROMFSINST) -p +x /usr/bin/transmission.sh
