board profiles: disable CONFIG_FIRMWARE_INCLUDE_SERIAL for n56u_aria and n56u_dlna templates (shrink image size)

--- a/trunk/configs/templates/n56u_aria.config
+++ b/trunk/configs/templates/n56u_aria.config
@@ -69,7 +69,7 @@ CONFIG_FIRMWARE_INCLUDE_UVC=y
 #CONFIG_FIRMWARE_INCLUDE_HID=y
 
 ### Include USB-Serial modules (e.g. pl2303). ~0.03MB
-CONFIG_FIRMWARE_INCLUDE_SERIAL=y
+#CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 
 ### Include network QoS scheduling modules. ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_QOS=y
