--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -102,7 +102,7 @@ dir_y						+= pppd
 dir_y						+= pppoe
 dir_y						+= accel-pptpd
 dir_y						+= xl2tpd
-dir_y						+= rp-l2tp
+dir_$(CONFIG_FIRMWARE_INCLUDE_RPL2TP)		+= rp-l2tp
 dir_y						+= lldt
 dir_y						+= scripts
 dir_$(OPENSSH_ENABLED)				+= openssh
