--- a/trunk/configs/templates/n11p_nano.config
+++ b/trunk/configs/templates/n11p_nano.config
@@ -77,6 +77,9 @@ CONFIG_FIRMWARE_INCLUDE_LANG_RU=y
 ### Include syslog for SMB and WINS server. ~0.3MB
 #CONFIG_FIRMWARE_INCLUDE_SMBD_SYSLOG=y
 
+### Include alternative L2TP control client RP-L2TP. ~0.1MB
+#CONFIG_FIRMWARE_INCLUDE_RPL2TP=y
+
 ### Include EAP-TTLS and EAP-PEAP authentication support. openssl ~1.2MB, wpa_supplicant +0.04MB
 #CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
 
