--- a/trunk/configs/templates/n56u_base.config
+++ b/trunk/configs/templates/n56u_base.config
@@ -140,6 +140,9 @@ CONFIG_FIRMWARE_INCLUDE_SMBD=y
 ### Include FTP server. ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_FTPD=y
 
+### Include alternative L2TP control client RP-L2TP. ~0.1MB
+CONFIG_FIRMWARE_INCLUDE_RPL2TP=y
+
 ### Include EAP-TTLS and EAP-PEAP authentication support. openssl ~1.2MB, wpa_supplicant +0.04MB
 CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
 
