rc: add usb5v applet

--- a/trunk/user/rc/Makefile
+++ b/trunk/user/rc/Makefile
@@ -194,6 +194,7 @@ ifdef CONFIG_USB_SUPPORT
 	cd $(INSTALLDIR)/sbin && ln -sf rc mdev_tty
 	cd $(INSTALLDIR)/sbin && ln -sf rc mdev_wdm
 	cd $(INSTALLDIR)/sbin && ln -sf rc zerocd
+	cd $(INSTALLDIR)/sbin && ln -sf rc usb5v
 	cd $(INSTALLDIR)/sbin && ln -sf rc ejusb
 	cd $(INSTALLDIR)/sbin && ln -sf rc ejusb1
 ifneq ($(BOARD_NUM_USB_PORTS),1)
