--- a/trunk/linux-3.0.x/drivers/crypto/Makefile
+++ b/trunk/linux-3.0.x/drivers/crypto/Makefile
@@ -15,3 +15,4 @@ obj-$(CONFIG_CRYPTO_DEV_PICOXCELL) += picoxcell_crypto.o
 obj-$(CONFIG_CRYPTO_DEV_S5P) += s5p-sss.o
 
 obj-$(CONFIG_CRYPTO_DEV_LINUX) += cryptodev/
+obj-$(CONFIG_CRYPTO_DEV_MTK_AES) += mtk_aes/
