board profiles: enable MT7628 AES Engine for ASUS RT-AC1200 profile

--- a/trunk/configs/boards/RT-AC1200/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC1200/kernel-3.4.x.config
@@ -1811,7 +1811,11 @@ CONFIG_CRYPTO_ARC4=y
 # CONFIG_CRYPTO_ANSI_CPRNG is not set
 # CONFIG_CRYPTO_USER_API_HASH is not set
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
-# CONFIG_CRYPTO_HW is not set
+CONFIG_CRYPTO_HW=y
+CONFIG_CRYPTO_DEV_LINUX=m
+CONFIG_CRYPTO_DEV_MTK_AES=m
+# CONFIG_CRYPTO_DEV_MTK_AES_INT is not set
+# CONFIG_CRYPTO_DEV_HIFN_795X is not set
 # CONFIG_BINARY_PRINTF is not set
 
 #
