board profiles: enable CRYPTO_ANSI_CPRNG for ASUS RT-AC1200 profile (need for AES)

--- a/trunk/configs/boards/RT-AC1200/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC1200/kernel-3.4.x.config
@@ -1726,7 +1726,7 @@ CONFIG_CRYPTO_BLKCIPHER=y
 CONFIG_CRYPTO_BLKCIPHER2=y
 CONFIG_CRYPTO_HASH=y
 CONFIG_CRYPTO_HASH2=y
-# CONFIG_CRYPTO_RNG is not set
+CONFIG_CRYPTO_RNG=y
 CONFIG_CRYPTO_RNG2=y
 CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_MANAGER2=y
@@ -1808,7 +1808,7 @@ CONFIG_CRYPTO_ARC4=y
 #
 # Random Number Generation
 #
-# CONFIG_CRYPTO_ANSI_CPRNG is not set
+CONFIG_CRYPTO_ANSI_CPRNG=y
 # CONFIG_CRYPTO_USER_API_HASH is not set
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
