uclibc: fix build with new linux kernels

--- a/trunk/configs/boards/uclibc-mipsel.config
+++ b/trunk/configs/boards/uclibc-mipsel.config
@@ -61,7 +61,7 @@ UCLIBC_HAS_FPU=y
 DO_C99_MATH=y
 # DO_XSI_MATH is not set
 # UCLIBC_HAS_FENV is not set
-KERNEL_HEADERS="$(ROOTDIR)/$(LINUXDIR)/include"
+KERNEL_HEADERS="$(KERNEL_HEADERS_PATH)"
 HAVE_DOT_CONFIG=y
 
 #
