board profiles: enable GRO support for MT7621 devices (improve performance)

--- a/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
@@ -1901,7 +1901,7 @@ CONFIG_GENERIC_ATOMIC64=y
 #
 CONFIG_RAETH=y
 CONFIG_RAETH_NAPI=y
-# CONFIG_RAETH_NAPI_GRO is not set
+CONFIG_RAETH_NAPI_GRO=y
 CONFIG_RAETH_BQL=y
 CONFIG_RAETH_QDMA=y
 # CONFIG_RAETH_QDMATX_QDMARX is not set
