--- a/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N56UB1/kernel-3.4.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.110 Kernel Configuration
+# Linux/mips 3.4.111 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -56,6 +56,7 @@ CONFIG_PCIE_PERST_ONLY=y
 # CONFIG_RALINK_MT7621_PLL900 is not set
 # CONFIG_RALINK_SYSTICK_COUNTER is not set
 # CONFIG_RALINK_CPUSLEEP is not set
+CONFIG_CLKSRC_MIPS_GIC=y
 # CONFIG_RT2880_DRAM_16M is not set
 # CONFIG_RT2880_DRAM_32M is not set
 # CONFIG_RT2880_DRAM_64M is not set
@@ -135,6 +136,8 @@ CONFIG_MIPS_MT_FPAFF=y
 CONFIG_MIPS_CMP=y
 CONFIG_MIPS_GIC_IPI=y
 # CONFIG_ARCH_PHYS_ADDR_T_64BIT is not set
+CONFIG_CPU_MIPSR2_IRQ_VI=y
+CONFIG_CPU_MIPSR2_IRQ_EI=y
 CONFIG_CPU_HAS_SYNC=y
 # CONFIG_LONG_CALLS is not set
 # CONFIG_HIGHMEM is not set
