--- a/trunk/configs/templates/n56u_aria.config
+++ b/trunk/configs/templates/n56u_aria.config
@@ -71,6 +71,9 @@ CONFIG_FIRMWARE_INCLUDE_UVC=y
 ### Include USB-Serial modules (e.g. pl2303). ~0.03MB
 #CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 
+### Include USB-Audio modules ~0.46MB
+#CONFIG_FIRMWARE_INCLUDE_AUDIO=y
+
 ### Include network QoS scheduling modules. ~0.2MB
 #CONFIG_FIRMWARE_INCLUDE_QOS=y
 
