--- a/trunk/user/ipset/ipset-6.x/configure.ac
+++ b/trunk/user/ipset/ipset-6.x/configure.ac
@@ -1,5 +1,5 @@
 dnl Boilerplate
-AC_INIT([ipset], [6.27], [kadlec@blackhole.kfki.hu])
+AC_INIT([ipset], [6.29], [kadlec@blackhole.kfki.hu])
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CANONICAL_HOST
 AC_CONFIG_MACRO_DIR([m4])
@@ -11,6 +11,8 @@ AC_ENABLE_STATIC
 LT_INIT([dlopen])
 LT_CONFIG_LTDL_DIR([libltdl])
 LTDL_INIT([nonrecursive])
+
+PKG_PROG_PKG_CONFIG
 
 dnl Shortcut: Linux supported alone
 case "$host" in
@@ -38,6 +40,34 @@ AC_ARG_WITH([ksource],
             [KSOURCEDIR="$withval";])
 AM_CONDITIONAL(WITH_KBUILDDIR, test "$KBUILDDIR" != "")
 AC_SUBST(KBUILDDIR)
+
+dnl ipset bash compspec - bash shell programmable completion
+AC_ARG_ENABLE([bashcompl],
+	AS_HELP_STRING([--enable-bashcompl],
+	[Install bash completion for ipset]),
+	[enable_bashcompl="$enableval"], [enable_bashcompl="no"])
+
+# backward compatibility with older pkg-config
+m4_ifndef([PKG_CHECK_VAR], [
+# PKG_CHECK_VAR(VARIABLE, MODULE, CONFIG-VARIABLE,
+# [ACTION-IF-FOUND], [ACTION-IF-NOT-FOUND])
+# -------------------------------------------
+# Retrieves the value of the pkg-config variable for the given module.
+AC_DEFUN([PKG_CHECK_VAR],
+[AC_REQUIRE([PKG_PROG_PKG_CONFIG])dnl
+AC_ARG_VAR([$1], [value of $3 for $2, overriding pkg-config])dnl
+
+_PKG_CONFIG([$1], [variable="][$3]["], [$2])
+AS_VAR_COPY([$1], [pkg_cv_][$1])
+
+AS_VAR_IF([$1], [""], [$5], [$4])dnl
+])# PKG_CHECK_VAR
+])
+
+if test "x$enable_bashcompl" = "xyes"; then
+	PKG_CHECK_VAR(bashcompdir, [bash-completion], [completionsdir], , bashcompdir="${sysconfdir}/bash_completion.d")
+	AC_SUBST(bashcompdir)
+fi
 
 if test "$BUILDKMOD" == "yes"
 then
@@ -426,6 +456,27 @@ else
 	AC_SUBST(HAVE_NLA_PUT_IN_ADDR, undef)
 fi
 
+AC_MSG_CHECKING([kernel source for struct net in struct nfnl_callback])
+if test -f $ksourcedir/include/linux/netfilter/nfnetlink.h && \
+   $AWK '/^struct nfnl_callback / {for(i=1; i<=3; i++) {getline; print}}' $ksourcedir/include/linux/netfilter/nfnetlink.h | \
+   $GREP -q 'struct net'; then
+	AC_MSG_RESULT(yes)
+	AC_SUBST(HAVE_NET_IN_NFNL_CALLBACK_FN, define)
+else
+	AC_MSG_RESULT(no)
+	AC_SUBST(HAVE_NET_IN_NFNL_CALLBACK_FN, undef)
+fi
+
+AC_MSG_CHECKING([kernel source for EXPORT_SYMBOL_GPL in module.h])
+if test -f $ksourcedir/include/linux/module.h && \
+   $GREP -q 'EXPORT_SYMBOL_GPL' $ksourcedir/include/linux/module.h; then
+	AC_MSG_RESULT(yes)
+	AC_SUBST(HAVE_EXPORT_SYMBOL_GPL_IN_MODULE_H, define)
+else
+	AC_MSG_RESULT(no)
+	AC_SUBST(HAVE_EXPORT_SYMBOL_GPL_IN_MODULE_H, undef)
+fi
+
 AC_MSG_CHECKING([kernel source for struct net_generic])
 if test -f $ksourcedir/include/net/netns/generic.h && \
    $GREP -q 'struct net_generic' $ksourcedir/include/net/netns/generic.h; then
@@ -480,13 +531,16 @@ dnl Checks for library functions.
 
 dnl Generate output
 AC_CONFIG_FILES([Makefile include/libipset/Makefile
-	lib/Makefile lib/libipset.pc src/Makefile
+	lib/Makefile lib/libipset.pc src/Makefile utils/Makefile
 	kernel/include/linux/netfilter/ipset/ip_set_compat.h])
 AC_OUTPUT
 
 dnl Summary
 AC_MSG_RESULT([])
 AC_MSG_RESULT([$PACKAGE userspace tool configuration:])
+if test "x$bashcompdir" != "x"; then
+	AC_MSG_RESULT([    Bash completion directory: ${bashcompdir}])
+fi
 if test "x$enable_settype_modules" != "xyes"; then
 	AC_MSG_RESULT([    Dynamic module loading: disabled])
 else
