--- a/trunk/user/ipset/ipset-6.x/include/libipset/Makefile.in
+++ b/trunk/user/ipset/ipset-6.x/include/libipset/Makefile.in
@@ -193,11 +193,13 @@ HAVE_CHECKENTRY_BOOL = @HAVE_CHECKENTRY_BOOL@
 HAVE_ETHER_ADDR_COPY = @HAVE_ETHER_ADDR_COPY@
 HAVE_ETHER_ADDR_EQUAL = @HAVE_ETHER_ADDR_EQUAL@
 HAVE_EXPORT_H = @HAVE_EXPORT_H@
+HAVE_EXPORT_SYMBOL_GPL_IN_MODULE_H = @HAVE_EXPORT_SYMBOL_GPL_IN_MODULE_H@
 HAVE_IPV6_SKIP_EXTHDR_ARGS = @HAVE_IPV6_SKIP_EXTHDR_ARGS@
 HAVE_KVFREE = @HAVE_KVFREE@
 HAVE_LIST_LAST_ENTRY = @HAVE_LIST_LAST_ENTRY@
 HAVE_LIST_NEXT_ENTRY = @HAVE_LIST_NEXT_ENTRY@
 HAVE_NETLINK_DUMP_START_ARGS = @HAVE_NETLINK_DUMP_START_ARGS@
+HAVE_NET_IN_NFNL_CALLBACK_FN = @HAVE_NET_IN_NFNL_CALLBACK_FN@
 HAVE_NET_OPS_ID = @HAVE_NET_OPS_ID@
 HAVE_NFNL_LOCK_SUBSYS = @HAVE_NFNL_LOCK_SUBSYS@
 HAVE_NF_BRIDGE_GET_PHYSDEV = @HAVE_NF_BRIDGE_GET_PHYSDEV@
@@ -280,6 +282,7 @@ am__leading_dot = @am__leading_dot@
 am__quote = @am__quote@
 am__tar = @am__tar@
 am__untar = @am__untar@
+bashcompdir = @bashcompdir@
 bindir = @bindir@
 build = @build@
 build_alias = @build_alias@
