--- a/trunk/user/ipset/ipset-6.x/kernel/include/linux/netfilter/ipset/ip_set_compat.h.in
+++ b/trunk/user/ipset/ipset-6.x/kernel/include/linux/netfilter/ipset/ip_set_compat.h.in
@@ -30,6 +30,12 @@
 #@HAVE_ETHER_ADDR_COPY@ HAVE_ETHER_ADDR_COPY
 #@HAVE_NF_BRIDGE_GET_PHYSDEV@ HAVE_NF_BRIDGE_GET_PHYSDEV
 #@HAVE_NLA_PUT_IN_ADDR@ HAVE_NLA_PUT_IN_ADDR
+#@HAVE_NET_IN_NFNL_CALLBACK_FN@ HAVE_NET_IN_NFNL_CALLBACK_FN
+#@HAVE_EXPORT_SYMBOL_GPL_IN_MODULE_H@ HAVE_EXPORT_SYMBOL_GPL_IN_MODULE_H
+
+#ifdef HAVE_EXPORT_SYMBOL_GPL_IN_MODULE_H
+#include <linux/module.h>
+#endif
 
 #ifdef HAVE_EXPORT_H
 #include <linux/export.h>
@@ -252,13 +258,17 @@ static inline int nla_put_in6_addr(struct sk_buff *skb, int attrtype,
 }
 #endif
 
+#ifdef HAVE_NET_IN_NFNL_CALLBACK_FN
+#define IPSET_CBFN(fn, net, nl, skb, nlh, cda)	fn(net, nl, skb, nlh, cda)
+#define IPSET_SOCK_NET(net, ctnl)		net
+#else
+#define IPSET_CBFN(fn, net, nl, skb, nlh, cda)	fn(nl, skb, nlh, cda)
+#define IPSET_SOCK_NET(net, ctnl)		sock_net(ctnl)
+#endif
+
 #ifndef smp_mb__before_atomic
 #define smp_mb__before_atomic()	smp_mb()
 #define smp_mb__after_atomic()	smp_mb()
-#endif
-
-#ifndef __aligned_u64
-#define __aligned_u64 __u64
 #endif
 
 #ifndef pr_warn
