--- a/trunk/configs/boards/RT-AC54U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC54U/kernel-3.4.x.config
@@ -1302,6 +1302,7 @@ CONFIG_USB_HIDDEV=y
 # CONFIG_HID_BELKIN is not set
 # CONFIG_HID_CHERRY is not set
 # CONFIG_HID_CHICONY is not set
+# CONFIG_HID_PRODIKEYS is not set
 # CONFIG_HID_CYPRESS is not set
 # CONFIG_HID_DRAGONRISE is not set
 # CONFIG_HID_EMS_FF is not set
