--- a/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-N14U/kernel-3.4.x.config
@@ -1246,6 +1246,7 @@ CONFIG_USB_HIDDEV=y
 # CONFIG_HID_APPLE is not set
 # CONFIG_HID_BELKIN is not set
 # CONFIG_HID_CHERRY is not set
+# CONFIG_HID_PRODIKEYS is not set
 # CONFIG_HID_CHICONY is not set
 # CONFIG_HID_CYPRESS is not set
 # CONFIG_HID_DRAGONRISE is not set
