--- a/trunk/user/ipset/ipset-6.x/.gitignore
+++ b/trunk/user/ipset/ipset-6.x/.gitignore
@@ -6,6 +6,7 @@
 .deps/
 .libs/
 Makefile
+Makefile.in
 
 *.o.cmd
 *.ko
@@ -17,8 +18,11 @@ Module.symvers
 modules.order
 kernel/include/linux/netfilter/ipset/ip_set_compat.h
 
+/aclocal.m4
 /autom4te.cache/
-/config.h
+/build-aux/
+/config.*
+/configure
 /libtool
 /stamp-h1
 
