--- a/trunk/configs/boards/RP-AC56/kernel-3.4.x.config
+++ b/trunk/configs/boards/RP-AC56/kernel-3.4.x.config
@@ -54,7 +54,7 @@ CONFIG_PCIE_PORT1=y
 # CONFIG_PCIE_PORT2 is not set
 # CONFIG_PCIE_PERST_ONLY is not set
 # CONFIG_RALINK_MT7621_PLL900 is not set
-CONFIG_CLKSRC_MIPS_GIC=y
+# CONFIG_CLKSRC_MIPS_GIC is not set
 # CONFIG_RT2880_DRAM_16M is not set
 # CONFIG_RT2880_DRAM_32M is not set
 CONFIG_RT2880_DRAM_64M=y
