--- a/trunk/configs/boards/BN750DB/kernel-3.4.x.config
+++ b/trunk/configs/boards/BN750DB/kernel-3.4.x.config
@@ -341,9 +341,7 @@ CONFIG_PCI_DISABLE_COMMON_QUIRKS=y
 # CONFIG_PCI_PRI is not set
 # CONFIG_PCI_PASID is not set
 CONFIG_PCIEPORTBUS=y
-CONFIG_PCIEAER=y
-# CONFIG_PCIE_ECRC is not set
-# CONFIG_PCIEAER_INJECT is not set
+# CONFIG_PCIEAER is not set
 # CONFIG_PCIEASPM is not set
 CONFIG_MMU=y
 # CONFIG_PCCARD is not set
