dnsmasq: enable script support

--- a/trunk/user/dnsmasq/Makefile
+++ b/trunk/user/dnsmasq/Makefile
@@ -1,6 +1,6 @@
 SRC_NAME=dnsmasq-2.7x
 
-COPTS := -DHAVE_BROKEN_RTC -DNO_SCRIPT -DNO_INOTIFY -DNO_AUTH -DNO_LOOP
+COPTS := -DHAVE_BROKEN_RTC -DNO_INOTIFY -DNO_AUTH -DNO_LOOP
 ifndef CONFIG_IPV6
 COPTS += -DNO_IPV6
 endif
