board profiles: add new MT7628 params

--- a/trunk/configs/boards/RT-AC1200/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC1200/kernel-3.4.x.config
@@ -1981,12 +1981,15 @@ CONFIG_MT7628_AP_LLTD=y
 CONFIG_MT7628_AP_WDS=y
 CONFIG_MT7628_AP_MBSS=y
 CONFIG_MT7628_AP_APCLI=y
+# CONFIG_MT7628_AP_APCLI_AUTO_BW not set
+# CONFIG_MT7628_AP_APCLI_CERT is not set
 # CONFIG_MT7628_AP_MULTI_APCLI is not set
 # CONFIG_MT7628_AP_MAC_REPEATER is not set
 # CONFIG_MT7628_AP_AIRPLAY is not set
 # CONFIG_MT7628_AP_DFS is not set
 # CONFIG_MT7628_AP_CARRIER is not set
-CONFIG_MT7628_AP_GREENAP=y
+CONFIG_MT7628_AP_SMART_CARRIER_SENSE=y
+# CONFIG_MT7628_AP_GREENAP is not set
 # CONFIG_MT7628_AP_IDS is not set
 # CONFIG_MT7628_AP_DLS is not set
 
