board profiles: fix typo

--- a/trunk/configs/boards/RT-AC1200/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC1200/kernel-3.4.x.config
@@ -1981,7 +1981,7 @@ CONFIG_MT7628_AP_LLTD=y
 CONFIG_MT7628_AP_WDS=y
 CONFIG_MT7628_AP_MBSS=y
 CONFIG_MT7628_AP_APCLI=y
-# CONFIG_MT7628_AP_APCLI_AUTO_BW not set
+# CONFIG_MT7628_AP_APCLI_AUTO_BW is not set
 # CONFIG_MT7628_AP_APCLI_CERT is not set
 # CONFIG_MT7628_AP_MULTI_APCLI is not set
 # CONFIG_MT7628_AP_MAC_REPEATER is not set
