board profiles: add new MT7603E params

--- a/trunk/configs/boards/RP-AC56/kernel-3.4.x.config
+++ b/trunk/configs/boards/RP-AC56/kernel-3.4.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.111 Kernel Configuration
+# Linux/mips 3.4.112 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -1660,6 +1660,7 @@ CONFIG_MT76X3_AP_LLTD=y
 CONFIG_MT76X3_AP_WDS=y
 CONFIG_MT76X3_AP_MBSS=y
 CONFIG_MT76X3_AP_APCLI=y
+# CONFIG_MT76X3_AP_APCLI_CERT is not set
 # CONFIG_MT76X3_AP_MULTI_APCLI is not set
 # CONFIG_MT76X3_AP_MAC_REPEATER is not set
 # CONFIG_MT76X3_AP_AIRPLAY is not set
