--- a/trunk/configs/boards/KN-GIGA3/kernel-3.4.x.config
+++ b/trunk/configs/boards/KN-GIGA3/kernel-3.4.x.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/mips 3.4.111 Kernel Configuration
+# Linux/mips 3.4.112 Kernel Configuration
 #
 CONFIG_MIPS=y
 
@@ -2073,7 +2073,11 @@ CONFIG_MT76X2_AP_MBSS=y
 CONFIG_MT76X2_AP_MBSS_NEW_MBSSID_MODE=y
 CONFIG_MT76X2_AP_APCLI=y
 # CONFIG_MT76X2_AP_APCLI_CERT is not set
+# CONFIG_MT76X2_AP_APCLI_AUTO_BW is not set
 # CONFIG_MT76X2_AP_MAC_REPEATER is not set
+# CONFIG_MT76X2_AP_MWDS is not set
+# CONFIG_MT76X2_AP_SMART_MESH is not set
+# CONFIG_MT76X2_AP_AIRPLAY is not set
 # CONFIG_MT76X2_AP_DFS is not set
 # CONFIG_MT76X2_AP_CARRIER is not set
 # CONFIG_MT76X2_AP_GREENAP is not set
