--- a/trunk/configs/boards/RP-AC56/kernel-3.4.x.config
+++ b/trunk/configs/boards/RP-AC56/kernel-3.4.x.config
@@ -1641,7 +1641,11 @@ CONFIG_MT76X2_AP_MBSS=y
 CONFIG_MT76X2_AP_MBSS_NEW_MBSSID_MODE=y
 CONFIG_MT76X2_AP_APCLI=y
 # CONFIG_MT76X2_AP_APCLI_CERT is not set
+# CONFIG_MT76X2_AP_APCLI_AUTO_BW is not set
 # CONFIG_MT76X2_AP_MAC_REPEATER is not set
+# CONFIG_MT76X2_AP_MWDS is not set
+# CONFIG_MT76X2_AP_SMART_MESH is not set
+# CONFIG_MT76X2_AP_AIRPLAY is not set
 # CONFIG_MT76X2_AP_DFS is not set
 # CONFIG_MT76X2_AP_CARRIER is not set
 # CONFIG_MT76X2_AP_IDS is not set
