--- a/trunk/configs/boards/RT-AC1200/kernel-3.4.x.config
+++ b/trunk/configs/boards/RT-AC1200/kernel-3.4.x.config
@@ -415,6 +415,7 @@ CONFIG_IPV6_SIT=y
 CONFIG_IPV6_SIT_6RD=y
 CONFIG_IPV6_NDISC_NODETYPE=y
 # CONFIG_IPV6_TUNNEL is not set
+# CONFIG_IPV6_MULTIPLE_TABLES is not set
 CONFIG_IPV6_MROUTE=y
 # CONFIG_IPV6_MROUTE_MULTIPLE_TABLES is not set
 # CONFIG_IPV6_PIMSM_V2 is not set
