添加scutclient,vlmcsd,ttyd和napt66 添加scutclient和ttyd的webui控制页面 修改了一些出厂默认配置 修复tcpdump无法编译的问题

--- a/trunk/libs/Makefile
+++ b/trunk/libs/Makefile
@@ -27,6 +27,8 @@ LIBS_INCLUDE_LIBSSL=n
 LIBS_INCLUDE_LIBICONV=n
 LIBS_INCLUDE_LIBUSB_0=n
 LIBS_INCLUDE_LIBUSB_1=n
+LIBS_INCLUDE_LIBJSON_C=n
+LIBS_INCLUDE_LIBWEBSOCKETS=n
 LIBS_INCLUDE_MEDIA=n
 STORAGE_ENABLED=n
 
@@ -59,6 +61,10 @@ endif
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_SSWAN),y)
 LIBS_INCLUDE_LIBSSL=y
 endif
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_TTYD),y)
+LIBS_INCLUDE_LIBJSON_C=y
+LIBS_INCLUDE_LIBWEBSOCKETS=y
+endif
 
 ifeq ($(STORAGE_ENABLED),y)
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_TRANSMISSION),y)
@@ -78,6 +84,10 @@ LIBS_INCLUDE_MEDIA=y
 endif
 endif
 
+ifeq ($(LIBS_INCLUDE_LIBWEBSOCKETS),y)
+LIBS_INCLUDE_LIBSSL=y
+endif
+
 ifdef CONFIG_USB_SUPPORT
 LIBS_INCLUDE_LIBUSB_1=y
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_U2EC),y)
@@ -95,6 +105,8 @@ dir_$(LIBS_INCLUDE_LIBICONV)			+= libiconv
 dir_$(LIBS_INCLUDE_LIBSSL)			+= libssl
 dir_$(LIBS_INCLUDE_LIBUSB_0)			+= libusb
 dir_$(LIBS_INCLUDE_LIBUSB_1)			+= libusb-1.0
+dir_$(LIBS_INCLUDE_LIBJSON_C)			+= libjson-c
+dir_$(LIBS_INCLUDE_LIBWEBSOCKETS)		+= libwebsockets
 dir_y						+= libnfnetlink
 
 # ipset shared libs
