--- a/trunk/user/Makefile
+++ b/trunk/user/Makefile
@@ -22,6 +22,7 @@ FS_NTFS_ENABLED=n
 STORAGE_ENABLED=n
 OPENSSH_ENABLED=n
 DROPBEAR_ENABLED=n
+TTYD_ENABLED=n
 SAMBA_ENABLED=n
 ifneq ($(CONFIG_FIRMWARE_INCLUDE_OPENSSH),y)
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_DROPBEAR),y)
@@ -32,6 +33,10 @@ endif
 endif
 else
 OPENSSH_ENABLED=y
+endif
+
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_TTYD),y)
+TTYD_ENABLED=y
 endif
 
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_WINS),y)
@@ -111,6 +116,10 @@ dir_$(CONFIG_FIRMWARE_INCLUDE_SSWAN)		+= strongswan
 dir_$(CONFIG_FIRMWARE_INCLUDE_XUPNPD)		+= xupnpd
 dir_$(CONFIG_FIRMWARE_INCLUDE_TCPDUMP)		+= tcpdump
 dir_$(SAMBA_ENABLED)				+= samba3
+dir_$(TTYD_ENABLED)					+= ttyd
+dir_$(CONFIG_FIRMWARE_INCLUDE_SCUT_MOD)         += scutclient
+dir_$(CONFIG_FIRMWARE_INCLUDE_VLMCSD)			+= vlmcsd
+dir_$(CONFIG_FIRMWARE_INCLUDE_NAPT66)			+= napt66
 
 ifdef CONFIG_BLK_DEV_SD
 dir_$(CONFIG_FIRMWARE_INCLUDE_HDPARM)		+= hdparm
