--- a/trunk/user/www/Makefile
+++ b/trunk/user/www/Makefile
@@ -164,6 +164,11 @@ ifneq ($(STORAGE_ENABLED),y)
 	rm -rf $(INSTALLDIR)/www/images/AiDisk
 	rm -rf $(INSTALLDIR)/www/images/Tree
 endif
+ifneq ($(CONFIG_FIRMWARE_INCLUDE_SCUT_MOD),y)
+	rm -f $(INSTALLDIR)/www/scutclient.asp
+	rm -f $(INSTALLDIR)/www/scutclient_log.asp
+	rm -f $(INSTALLDIR)/www/scutclient_action.asp
+endif
 
 clean:
 	@echo "Clean www romfs"
