更换aria2前端为aria-ng-0.3.0

--- a/trunk/user/aria2/Makefile
+++ b/trunk/user/aria2/Makefile
@@ -1,5 +1,8 @@
 SRC_NAME=aria2-1.15.2
 
+SRC_ARIA_NG_NAME=aria-ng-0.3.0
+SRC_ARIA_NG_URL=https://github.com/mayswind/AriaNg/releases/download/0.3.0/aria-ng-0.3.0.zip
+
 CFLAGS  += -ffunction-sections -fdata-sections
 CXXFLAGS += -ffunction-sections -fdata-sections
 LDFLAGS += -Wl,--gc-sections
@@ -41,18 +44,26 @@ configure:
 		--host=$(HOST_TARGET) \
 		--build=$(HOST_BUILD) ; \
 	)
+ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL),y)
+	( if [ ! -f $(THISDIR)/$(SRC_ARIA_NG_NAME).zip ]; then \
+		wget -t5 --timeout=20 --no-check-certificate -O $(SRC_ARIA_NG_NAME).zip $(SRC_ARIA_NG_URL); \
+	fi )
+	( if [ ! -d $(THISDIR)/ariaweb ]; then \
+		unzip $(SRC_ARIA_NG_NAME).zip -d ariaweb; \
+	fi )
+endif
 
 clean:
 	if [ -f $(SRC_NAME)/Makefile ] ; then \
 		$(MAKE) -C $(SRC_NAME) distclean ; \
 	fi ; \
+	rm -rf ariaweb
 	rm -f config_done
 	rm -rf install
 
 romfs:
 ifeq ($(CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL),y)
 	cp -rf $(THISDIR)/ariaweb $(INSTALLDIR)/www
-	cd $(INSTALLDIR)/www/ariaweb && ln -sf /mnt/aria/config/configuration.js configuration.js
 endif
 	$(ROMFSINST) $(THISDIR)/$(SRC_NAME)/src/aria2c /usr/bin/aria2c
 	$(ROMFSINST) -p +x /usr/bin/aria.sh
