--- a/.travis.yml
+++ b/.travis.yml
@@ -9,15 +9,16 @@ compiler:
 
 before_install:
     - sudo apt-get update -qq
-    - sudo apt-get install -qq autoconf automake bison build-essential flex gawk gettext gperf libtool pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev texinfo python-docutils gettext bison zlib1g-dev libncurses5-dev autopoint
+    - sudo apt-get install -qq git autoconf automake bison build-essential flex gawk gettext gperf libtool pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev texinfo python-docutils gettext bison zlib1g-dev libncurses5-dev autopoint curl
 
 before_script:
     - sudo mkdir -p /opt/rt-n56u/
-    - sudo cp -r ./toolchain-mipsel/ /opt/rt-n56u/toolchain-mipsel/
-    - sudo cp -r ./trunk/ /opt/rt-n56u/trunk/
+    - sudo git clone https://gitee.com/hanwckf/padavan-toolchain.git
+    - sudo mv ./padavan-toolchain/ /opt/rt-n56u/toolchain-mipsel/
+    - sudo mv ./trunk/ /opt/rt-n56u/trunk/
     - ls /opt/rt-n56u
-    - cd /opt/rt-n56u/toolchain-mipsel && sudo sh ./clean_sources && sudo sh ./build_toolchain_nolog
     - cd /opt/rt-n56u/toolchain-mipsel && sudo chmod u+x ./toolchain-3.4.x/bin/*
 
 script:
-    - cd /opt/rt-n56u/trunk/ && sudo sh ./build_firmware_nolog
+    - cd /opt/rt-n56u/trunk/ && sudo bash ./build_firmware_nolog
+    - cd /opt/rt-n56u/trunk/images && curl --upload-file ./PSG1218_3.4.3.9-099.trx https://transfer.sh/PSG1218_3.4.3.9-099.trx
